Complete e-commerce application with Next.js
- Update deps and README
- Implement SSR for homepage and category pages with category mapping utils
- Add cart components, extract page components to domain modules
- Add zustand, extract products module from categories
- Implement categories page with modular architecture
- Add base pages
- Add biome, mantine, axios
- Bootstrap next app

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@
 # misc
 .DS_Store
 *.pem
-.ai
 
 # debug
 npm-debug.log*
@@ -40,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE/Editor files
+.cursor/
+.ai/
+.vscode/
+.idea/
+
