--- a/package.json
+++ b/package.json
@@ -2,23 +2,36 @@
   "name": "impact-ecommerce",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=22.16.0",
+    "pnpm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "check": "biome check .",
+    "check:fix": "biome check . --write",
+    "format": "biome format . --write"
   },
   "dependencies": {
+    "@mantine/core": "^8.1.3",
+    "@mantine/notifications": "^8.1.3",
+    "axios": "^1.10.0",
+    "lucide-react": "^0.525.0",
+    "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.1"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "^2.1.1",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
